--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.16.0",
     "sass": "^1.32.8"
   },
   "devDependencies": {
@@ -21,6 +22,10 @@
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.10",
     "tailwindcss": "^2.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "prettier": "^2.2.1"
+  },
+  "lint-staged": {
+    "*.{js,css,md,ts,tsx}": "prettier --write"
   }
 }
