--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "10.2.3",
@@ -20,12 +21,15 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "postcss": "^8.2.10",
+    "prettier": "^2.2.1",
     "tailwindcss": "^2.1.1",
-    "typescript": "^4.2.4",
-    "prettier": "^2.2.1"
+    "typescript": "^4.2.4"
   },
   "lint-staged": {
-    "*.{js,css,md,ts,tsx}": "prettier --write"
+    "*.{js,css,md,ts,tsx}": "prettier --write",
+    "*.{js,css,md}": "prettier --write"
   }
 }
