--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "next": "10.2.3",
     "postcss-import": "^13.0.0",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.16.0",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
