--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
-    "next": "10.2.3",
+    "next": "^11.0.0",
     "postcss-import": "^13.0.0",
     "postcss-preset-env": "^6.7.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.32.8",
     "swr": "^0.5.6"
   },
@@ -28,7 +28,7 @@
     "postcss": "^8.2.10",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write",
