--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "next": "^11.0.0",
+    "numeral": "^2.0.6",
     "postcss-import": "^13.0.0",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recharts": "^2.1.2",
     "sass": "^1.32.8",
     "swr": "^0.5.6"
   },
