--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --watch"
   },
   "dependencies": {
     "ethers": "^5.4.6",
@@ -23,13 +24,19 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
+    "babel-jest": "^27.2.5",
     "husky": ">=6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.5",
     "lint-staged": ">=10",
     "postcss": "^8.2.10",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^2.1.1",
     "typescript": "^4.3.2"
   },
