--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "ethereum-checksum-address": "^0.0.7",
     "ethers": "^5.4.6",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
