--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "next-fe-starter",
+  "name": "loopring-explorer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "prepare": "husky install",
     "test": "jest --watch"
   },
