--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "prepare": "husky install",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "export": "next export"
   },
   "dependencies": {
     "ethereum-checksum-address": "^0.0.7",
