--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "run-p codegen:watch dev:next",
+    "dev:next": "TAILWIND_MODE=watch next dev",
     "build": "next build",
     "start": "next start",
     "prepare": "husky install",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "codegen:watch": "graphql-codegen --config codegen.yml --watch"
   },
   "dependencies": {
     "ethereum-checksum-address": "^0.0.7",
     "ethers": "^5.4.6",
-    "graphql": "^15.5.0",
+    "graphql": "^16.3.0",
     "graphql-request": "^3.4.0",
     "js-cookie": "^3.0.1",
     "next": "^12.1.5",
@@ -26,6 +29,12 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^3.1.1",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/introspection": "^2.1.1",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-operations": "^2.3.5",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.11",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/node": "^14.14.37",
@@ -36,6 +45,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.5",
     "lint-staged": ">=10",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.2",
