--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "codegen:watch": "graphql-codegen --config codegen.yml --watch"
   },
   "dependencies": {
+    "@apollo/client": "3.5.x",
     "ethereum-checksum-address": "^0.0.7",
     "ethers": "^5.4.6",
-    "graphql": "^16.3.0",
+    "graphql": "^16.4.0",
     "graphql-request": "^3.4.0",
     "js-cookie": "^3.0.1",
     "next": "^12.1.5",
     "numeral": "^2.0.6",
     "postcss-import": "^13.0.0",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "7.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "recharts": "^2.1.2",
