--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-preset-env": "7.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "recharts": "^2.1.2",
     "sass": "^1.32.8",
     "swr": "^0.5.6"
