--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "run-p codegen:watch dev:next",
     "dev:next": "TAILWIND_MODE=watch next dev",
-    "build": "next build",
+    "build": "run-p codegen build:next",
+    "build:next": "next build",
     "start": "next start",
     "prepare": "husky install",
     "test": "jest --watch",
