Refactor cursor pagination for better structure

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "codegen:watch": "graphql-codegen --config codegen.yml --watch"
   },
   "dependencies": {
-    "@apollo/client": "3.5.x",
+    "@apollo/client": "^3.6.2",
     "ethereum-checksum-address": "^0.0.7",
     "ethers": "^5.4.6",
     "graphql": "^16.4.0",
