--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
-    "recharts": "^2.1.2",
+    "recharts": "2.1.9",
     "sass": "^1.32.8",
     "swr": "^0.5.6"
   },
@@ -59,5 +59,9 @@
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write",
     "*.{js,css,md}": "prettier --write"
+  },
+  "resolutions": {
+    "recharts": "2.1.9",
+    "d3-shape": "2.1.0"
   }
 }
